// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Content View ValueText should add title attribute 1`] = `
<div>
  <div
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center"
    title="TEST"
  >
    TEST
  </div>
</div>
`;

exports[`Content View ValueText should render highlighted text if passed 1`] = `
<div>
  <div
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center"
  >
    <span>
      USUAL_PART 
    </span>
    <span
      class="dx-cardview-field-value__text-part--highlighted"
    >
      MATCH_PART
    </span>
    <span>
       USUAL_PART
    </span>
  </div>
</div>
`;

exports[`Content View ValueText should render plain text if highlighted text is null 1`] = `
<div>
  <div
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center"
  >
    TEST_TEXT
  </div>
</div>
`;

exports[`Content View ValueText should set root classes 1`] = `
<div>
  <div
    class="dx-cardview-field-value dx-cardview-field-value--text-align-center"
  >
    TEST
  </div>
</div>
`;
